--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
 .App {
+  background-color:#000;
   text-align: center;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -28,29 +23,63 @@
   color: #61dafb;
 }
 
-.circle {
-   border-radius:50%;
+.body {
+  color:#000;
 }
 
-/* Two image container (50% width for two) */
-.image-column {
-	  float: left;
-	  width: 25%;
-	  padding: 50px;
-      }
-
-/* Clear floats after image containers */
-.image-row::after {
-	  content: "";
-	  clear: both;
-	  display: table;
-	    }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-dark {
+  background-color:#000;
 }
+
+.bg-primary {
+  background-color:#000;
+}
+
+/* Main containers for website */
+
+.site-container {
+  background-color:#000;
+  margin:10px;
+  text-align:center; 
+}
+
+.header-section {
+   background-color:#000;
+   text-align:center;
+}
+
+.section {
+   background-color:#000;
+   text-align:center;
+}
+
+/* Navigation */
+
+.navbar {
+   background-color:#000;
+}
+
+.nav-link {
+   font-family: "Chivo",sans-serif;
+   font-size: 1rem;
+   color:#fff;
+}
+
+.navbar-nav {
+   font-family: "Overpass",sans-serif;
+   font-size: 1rem;
+   font-weight: 400;
+   color:#fff;
+}
+
+.navbar-light .navbar-brand, .navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
+   font-family: "Overpass",sans-serif;
+   font-size: 2rem;
+   font-weight: 600;
+   color: #fff;
+}
+
+.navbar-toggler {
+   background-color:#fff;
+}
+
