--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,32 @@
 body {
-  margin: 0;
+  margin: 0 10 0 10;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Montserrat', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background-color:black;
 }
+
+h1 {
+   font-family: 'Overpass', sans-serif;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   color:white;
+	    }
 
 h2 {
    font-family: 'Overpass', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
+   color:white;
 }
 
 p {
    font-family: 'Chivo', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
+   color:white;
 }
 
 code {
